# bio-med-news

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  codex-handoff.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: db.py  main.py
backend/app/api/: routes.py
backend/app/core/: categories.py  config.py  logging.py
backend/app/models/: __init__.py  news.py  product_tracking.py
backend/app/schemas/: pipeline.py  products.py  responses.py
backend/app/services/: classification.py  corporate_dynamics.py  database_init.py  drug_aliases.py  enrichment.py  glm5_client.py  ingestion.py  news_repository.py  product_repository.py  product_tracking.py  sample_data.py  sources.py  summary.py
backend/config/: cell_therapy_companies.json  drug_synonyms.json  sources.json
backend/scripts/: reenrich_news.py
backend/tests/: test_config.py  test_glm5_client.py  test_ingestion.py  test_logging.py  test_product_tracking.py  test_search_escaping.py  test_sources.py
backend/worker/: run_worker.py  scheduler.py
claude_memory/: CHANGELOG-2026-04-12.md
claude_review/: REVIEW-2026-04-12.md
docs/: API_SPEC.md  ARCHITECTURE.md  DEPLOYMENT.md  PRD.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx
frontend/components/: corporate-dynamics.tsx  dashboard.tsx  product-timeline.tsx  product-tracker.tsx  skeleton-card.tsx  theme-toggle.tsx  top-nav.tsx
scripts/: deploy.sh
(+17 files in other folders)
