[project]
name = "biomed-news-backend"
version = "0.4.0"
description = "FastAPI backend skeleton for the Biomed / Cell Therapy Daily Intelligence Dashboard."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0,<2.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "fastapi>=0.115.0,<0.116.0",
    "slowapi>=0.1.9,<0.2.0",
    "feedparser>=6.0.11,<7.0.0",
    "httpx>=0.28.0,<0.29.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "sqlalchemy>=2.0.30,<3.0.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*", "worker*"]
